# ChangeLog for www-plugins/noscript
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*noscript-2.0.2.3 (21 Aug 2010)

  21 Aug 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.2.1 (19 Aug 2010)

  19 Aug 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-2.0.1 (14 Aug 2010)

  14 Aug 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

  01 Aug 2010; Martin Väth <martin@mvath.de>
  Bump revision to force eclass upgrade.

*noscript-2.0 (31 Jul 2010)

  31 Jul 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-1.10 (16 Jul 2010)

  16 Jul 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-1.9.9.97 (03 Jul 2010)

  03 Jul 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-1.9.9.87 (12 Jun 2010)

  12 Jun 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

*noscript-1.9.9.81 (06 Jun 2010)

  06 Jun 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild. Switch to new mv_mozextension.eclass

*noscript-1.9.9.69 (22 Apr 2010)

  22 Apr 2010; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.

  07 Apr 2010; Martin Väth <martin@mvath.de>
  Add RESTRICT="mirror"

*noscript-1.9.9.57 (02 Apr 2010)

  02 Apr 2010; Martin Väth <martin@mvath.de>
  Version bump from the portage tree; clearing previous ChangeLog.