@@ -1,0 +1,4 @@
+DIST eix-0.20.7.tar.xz 419104 RMD160 d2608f76fd3c644ed6d3a5ffba7b49c058fc87a0 SHA1 54ab933895ef617fe362040f4eae103ff153d646 SHA256 44327699a1802c31a7458da83925c2576544cb23c4789c7889d09a91fa524b57
+EBUILD eix-0.20.7.ebuild 1540 RMD160 93583561ce949f78dc820b26048a67f781776f0f SHA1 dfd0501faadd5bbd7355e06807fa6ca8fa40c084 SHA256 0b8635b4015d3b82430bd66abb12bd56dc10d058d89a24a89e8c80bfa59e4ffc
+MISC ChangeLog 321 RMD160 4f6bc07b49becd97b7ace235418acf8339e52cf9 SHA1 3b206c993d97c0f55d6db403febd2734a1236f95 SHA256 5d2d8ec701a9213698eaedcfdc6ad030fb848a28beb99403d0872d8040653329
+MISC metadata.xml 2193 RMD160 498f0619acad6adaac47497ba0d0c65eb0785241 SHA1 eaf011ee64ed16383f0326d7d9bdf673ba96fee1 SHA256 6c4f99cdfd38eeb7cff4eae3637f051b56eb47ea200f73c66a8afd8ab109437d
