@@ -1,0 +1,27 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
+<pkgmetadata>
+<herd>no-herd</herd>
+  <maintainer>
+    <email>martin@mvath.de</email>
+    <name>Martin Väth</name>
+	<description>Upstream developer, assign bugs</description>
+  </maintainer>
+  <maintainer>
+    <email>darkside@gentoo.org</email>
+    <name>Jeremy Olexa</name>
+	<description>Proxy committer, CC bugs</description>
+  </maintainer>
+  <use>
+	<flag name="bzip2">Support for parsing of environment.bz2 to guess repository name of packages installed with ancient portage versions (requires <pkg>app-arch/bzip2</pkg>). This flag is safe to disable for portage users that have re-merged all packages since 2007. This flag will be phased out.</flag>
+	<flag name="debug">Build with CXXFLAGS/LDFLAGS for debugging support; not recommended for normal use.</flag>
+	<flag name="deprecated">Installs wrapper scripts for all the previous executable names that will soon be going away. Enabled by default in 0.17.0, optional in 0.18.0, removed in next major release.</flag>
+	<flag name="doc">Create description of the eix cache file additionally in html format</flag>
+	<flag name="hardened">Add CXXFLAGS/LDFLAGS enhancing security at the cost of a slight speed loss. If a hardened gcc is used, these flags should not make a difference.</flag>
+	<flag name="nls">Support foreign language messages (experimental; currently only de)</flag>
+	<flag name="optimization">Adds several supplemental CXXFLAGS/LDFLAGS for optimization that upstream endorses. Absense of this USE flag does not strip user's *FLAGS</flag>
+	<flag name="strong-optimization">Adds several more agressive CXXFLAGS/LDFLAGS for optimization like graphite (if available). May cause trouble with some buggy compiler versions. Absense of this USE flag does not strip user's *FLAGS</flag>
+	<flag name="sqlite">Compile in support for portage's sqlite backend; to actually use it you need additional configuration of portage and eix</flag>
+	<flag name="tools">Create separate binary for script helper tools (currently only: versionsort); useful if they are called extremely often</flag>
+  </use>
+</pkgmetadata>
