@@ -1,4 +1,4 @@
-DIST noscript-2.0.2.3.xpi 496732 RMD160 4b3a91ec0730c744964ac80f7f6f7dd8c4aa2859 SHA1 cefddcfc9bd4a773afa0e0e0d1e78468bd92f032 SHA256 94029192aa69ec80057917b3e99fd5dfc8c6ea42678d15286069cf314bad5a08
-EBUILD noscript-2.0.2.3.ebuild 495 RMD160 4d989c6a74642d2d964c91b8810d9d3501708e05 SHA1 04acd4e4e7a0625358fbbcf82610fbb04a2a2231 SHA256 a7d4cc1f195484bd328ca572e24695fdc47df107ced37bbe4d6bab68aef3636d
-MISC ChangeLog 1709 RMD160 1deb2aeea7295275ff840f5ca4448400d6b0000d SHA1 8553c8ccd5275fb7f0c914ebaa2a6d6321659e36 SHA256 6f75b3544f4c3e976260825adf246e1c2ca97c3717b134be0218566f7b82117d
+DIST noscript-2.0.2.5.xpi 496671 RMD160 ae6756143741aa3fd4549c4c7370cbd1334a0667 SHA1 06e251468d7d5b309133fe15def1595510d3befc SHA256 fb4d837708cfe447f74bbba216e5213a01757c097aa22a2159d5912b8b9daf59
+EBUILD noscript-2.0.2.5.ebuild 495 RMD160 4d989c6a74642d2d964c91b8810d9d3501708e05 SHA1 04acd4e4e7a0625358fbbcf82610fbb04a2a2231 SHA256 a7d4cc1f195484bd328ca572e24695fdc47df107ced37bbe4d6bab68aef3636d
+MISC ChangeLog 1842 RMD160 7709d35dc281a78edda1bd5b10cbfa31ac921ed3 SHA1 7376ff7614d981e0ecb1c0c706edee2cd18c2b29 SHA256 47af75da70b1308b2e5f1b12de51508f9f70ee4e5a2334a33631633f010ae139
 MISC metadata.xml 447 RMD160 4ec5ea6b99ff64f433b133a9347f0a57039b73b7 SHA1 a6af7ca7a606d2ddc4afbb9ba31ac694f22e9abd SHA256 927431d432628bf04ca3f6e6cd0fc9b5e40ac0f2d2ea70e4a795e0df527cba67
