@@ -1,0 +1,9 @@
+# ChangeLog for app-portage/eix
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header $
+
+*eix-0.20.7 (03 Sep 2010)
+
+  03 Sep 2010; Martin Väth <martin@mvath.de>
+  Copy from tree and remove previous ChangeLog.
+  I will bump here until Jeremy has time to bump in the main tree.
