@@ -2,6 +2,11 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*noscript-2.0.2.5 (03 Sep 2010)
+
+  03 Sep 2010; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+
 *noscript-2.0.2.3 (21 Aug 2010)
 
   21 Aug 2010; Martin Väth <martin@mvath.de>
